tests/kulezi_tests/good/simple_if.lat
int main() {
    boolean x = true;
    if (x) {
        return 0;
    }

    return 1;
}