tests/kulezi_tests/bad/declaration_in_while.lat
int main() {
    while(true)
        int x = 5;
    return 0;
}